# latus

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: distances.rs  index_flat_hp.rs  index_flat_ip.rs  index_flat_l2.rs  indexes.rs
src/: lib.rs  prelude.rs
src/distances/: angular.rs  base.rs  hyperbolic.rs  lp_norm.rs  mod.rs
src/indexes/: index_flat_hp.rs  index_flat_ip.rs  index_flat_l2.rs  mod.rs
src/indexes/flat/: hp.rs  ip.rs  l2.rs  mod.rs
src/io/: parquet.rs
src/primitives/: distances.rs  filter.rs  inverted_index.rs  mod.rs  posting_list.rs  vector.rs  vector_table.rs
