[package]
name = "latus"
version = "0.1.0"
edition = "2021"
authors = ["Karl Higley <kmhigley@gmail.com>"]
description = "Approximate nearest neighbor search with integrated filtering"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Sorting
ordered-float = "3.0.0"
min-max-heap = "1.3.0"

# Core linear algebra
ndarray = "0.15.6"
ndarray-rand = "0.14.0"

# Dataframes
polars = { version = "0.24.0", features = ["dtype-categorical", "parquet", "partition_by", "sort_multiple"] }

# Compressed representations
# Useful for implementing filters and posting lists
# bitpacking = "0.8.4"
roaring = "0.10.1"

# TODO: Apply rayon parallel iterators for multi-threading, useful for index creation
# rayon = "1.5"

# Python bindings
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.4"
tempfile = "3.2.0"

[profile.bench]
debug = true

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "distances"
harness = false